@@ -235,6 +235,7 @@ BA  80- [libpari] FpXC_to_mod, FpXM_to_mod, FqXC_to_mod, FqXM_to_mod
 BA  81- [libpari] FFX_add, FpXY_FpXQ_evaly
 BA  82- [libpari] halfgcdii, RgX_halfgcd
 BA  83- new GP function halfgcd
+BA  84- [libpari] pari_realloc_ip
 
   Removed
      1- obsolete function rootsof1_kannan: use nfrootsof1
